0.20.19 - prune resolved server payloads
